; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/sysfs/extr_bin.c_release.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/sysfs/extr_bin.c_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { %struct.bin_buffer* }
%struct.bin_buffer = type { %struct.bin_buffer*, i32 }

@sysfs_bin_lock = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.bin_buffer*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %6 = load %struct.file*, %struct.file** %4, align 8
  %7 = getelementptr inbounds %struct.file, %struct.file* %6, i32 0, i32 0
  %8 = load %struct.bin_buffer*, %struct.bin_buffer** %7, align 8
  store %struct.bin_buffer* %8, %struct.bin_buffer** %5, align 8
  %9 = call i32 @mutex_lock(i32* @sysfs_bin_lock)
  %10 = load %struct.bin_buffer*, %struct.bin_buffer** %5, align 8
  %11 = getelementptr inbounds %struct.bin_buffer, %struct.bin_buffer* %10, i32 0, i32 1
  %12 = call i32 @hlist_del(i32* %11)
  %13 = call i32 @mutex_unlock(i32* @sysfs_bin_lock)
  %14 = load %struct.bin_buffer*, %struct.bin_buffer** %5, align 8
  %15 = getelementptr inbounds %struct.bin_buffer, %struct.bin_buffer* %14, i32 0, i32 0
  %16 = load %struct.bin_buffer*, %struct.bin_buffer** %15, align 8
  %17 = call i32 @kfree(%struct.bin_buffer* %16)
  %18 = load %struct.bin_buffer*, %struct.bin_buffer** %5, align 8
  %19 = call i32 @kfree(%struct.bin_buffer* %18)
  ret i32 0
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @hlist_del(i32*) #1

declare dso_local i32 @mutex_unlock(i32*) #1

declare dso_local i32 @kfree(%struct.bin_buffer*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
